@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - exception class UPSError now has methods to look inside the error data
 
 0.09_4 2014-06-10
  - do not swallow non-HTTP exceptions
